--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Task 0</title>
-    </head>
-    <body>
-        <script type="text/javascript" src="bundle.js"></script>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <script src="bundle.js"></script>
+</body>
 </html>
